--- a/style.css
+++ b/style.css
@@ -465,7 +465,7 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(77, 216, 255, 0.3);
+  background: rgba(77, 240, 255, 0.57);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -478,7 +478,7 @@ h2 {
 }
 
 .project-overlay span {
-  background: rgb(77, 216, 255);
+  background: #00f0ff;
   padding: 10px 18px;
   border-radius: 6px;
   font-weight: bold;
